add plugin build module for vaadin ui plugin

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>sailpoint-vaadin-ui</module>
         <module>sailpoint-extended</module>
         <module>sailpoint-build</module>
+        <module>sailpoint-vaadin-plugin</module>
     </modules>
     <packaging>pom</packaging>
 
