--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>sailpoint-extended-common</module>
         <module>sailpoint-extended-model</module>
         <module>sailpoint-vaadin-ui</module>
+        <module>sailpoint-extended-rest</module>
         <module>sailpoint-extended</module>
         <module>sailpoint-build</module>
         <module>sailpoint-vaadin-plugin</module>
@@ -30,7 +31,11 @@
         <spring.data.jpa.version>1.11.22.RELEASE</spring.data.jpa.version>
         <jpa.persistance.api.version>2.2</jpa.persistance.api.version>
         <hibernate.version>5.3.7.Final</hibernate.version>
+        <jersey.version>2.22.2</jersey.version>
+        <jackson.annotations.version>2.9.8</jackson.annotations.version>
+        <slf4j.version>1.7.25</slf4j.version>
         <lombok.version>1.18.8</lombok.version>
+        <mapstruct.version>1.3.0.Final</mapstruct.version>
 
         <!-- Vaadin version -->
         <vaadin.version>14.0.2</vaadin.version>
@@ -42,6 +47,11 @@
         <!-- plugins versions -->
         <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
         <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
+        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+
+        <!-- Test libraries versions -->
+        <junit.version>5.5.1</junit.version>
+        <mockito.version>3.0.0</mockito.version>
     </properties>
 
     <!-- Adding vaadin repositories -->
@@ -134,12 +144,67 @@
             <version>${identityiq.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Lombok version -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Mapstruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <!-- Mapstruct processor-->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Jersey servlets -->
+        <dependency>
+            <groupId>org.glassfish.jersey.bundles</groupId>
+            <artifactId>jaxrs-ri</artifactId>
+            <version>${jersey.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Jackson annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.annotations.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Testing libraries -->
+        <!-- Junit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+    <!-- Enable Junit5 tests -->
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
